--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_DeliveryInfoPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_DeliveryInfoPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<div>
     <div class="deliveryinfo">
         <div class="">
-            <div class="row">
+            <div class="row text-center">
                 <ul class="col-xs-12 col-sm-6 col-md-3 list-inline">
                     <li class="del1">
                         <svg width="36px" height="36px">
