--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartial.cshtml
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="middle-footer">
-                <aside id="column-left1" class="col-sm-4 col-xs-12">
+                <aside id="column-left1" class="col-sm-4 col-xs-12 follow-us-footer">
                     <div>
                         <h5 class="hidden-sm hidden-lg hidden-md">
                             <span>About Us</span>
@@ -86,7 +86,7 @@
                             <span>Contact us</span>
                             <button type="button" class="btn btn-primary toggle collapsed" data-toggle="collapse" data-target="#contact"></button>
                         </h5>
-                        <div id="contact" class="collapse footer-collapse footcontact fborder">
+                        <div id="contact" class="collapse footer-collapse footcontact ">
                             <ul class="list-unstyled f-left">
                                 <li><img src="/Areas/Shop/Content/app/img/icons/location.png" alt=""><span>76 Division St<br>Brick, NJ 08723</span></li>
                                 <li><img src="/Areas/Shop/Content/app/img/icons/email.png" alt=""><span>contact@example.com</span></li>
