--- a/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
                 @Html.Partial("_SliderPartial")
                 @Html.Partial("_DeliveryInfoPartial")
                 @Html.Action("_TopProductPartial")
+                @Html.Action("_TopProductBannerPartial")
                 @Html.Action("_OnSalePartial")
                 @Html.Action("_SpecialProductPartial")
                 @Html.Partial("_TopCategoryPartial")
