--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -68,25 +68,25 @@
 </nav>
 <header>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-3 col-xs-6 headlogo">
+        <div class="row header-row">
+            <div class="col-md-6 col-lg-6 head-logo">
                 <div id="logo" class="ui-logo">
                     <a href="@Url.Action("Index","Home")">
                         <img src="/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive" />
                     </a>
                 </div>
             </div>
-            <div class="col-xs-6 iconxs"></div>
-            <div class="col-sm-7 col-lg-7 col-xs-12 hsearch">
+            @*<div class="col-xs-6 iconxs"></div>*@
+            <div class="col-md-5 col-lg-5 h-search">
                 <div id="search-by-category" class="search-by-category">
                     <div class="search-container">
                         <div class="categories-container">
                             <div class="hover-cate">
-                                @* <p><span class="cate-selected" data-value="0">All Categories</span></p>*@
-                                @*<ul class="cate-items">*@
+                                 <p><span class="cate-selected" data-value="0">All Categories</span></p>
+                                 <ul class="cate-items">
+                                     @*@Html.DropDownList("ProductGroups", ViewBag.ProductGroups as SelectList, "All Categories", htmlAttributes: new { @class = "" })*@
 
-                                @Html.DropDownList("ProductGroups", ViewBag.ProductGroups as SelectList, "All Categories", htmlAttributes: new { @class = "" })
-                                @*</ul>*@
+                                 </ul>
 
                             </div>
                         </div>
@@ -99,8 +99,8 @@
                     </div>
                 </div>
             </div>
-            <div id="top-links" class="text-right top-menu-links col-sm-2 col-lg-2">
-                <ul class="list-inline">
+            <div id="top-links" class="col-md-1 col-lg-1 menu-link">
+                <ul class="list-inline list-inline-flex">
                     <li class="dropdown user_menu">
                         <a href="#" title="@(ViewBag.UserName == " " ? "My Account" : ViewBag.UserName)" class="dropdown-toggle" data-toggle="dropdown">
 
